--- a/profile-home.html
+++ b/profile-home.html
@@ -47,6 +47,14 @@
         flex: 1 1 300px;
     }
 
+    .profile-img img 
+    {
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        margin-top: 90px;
+    }
+
     h2 {
         font-family: 'Times New Roman', Times, serif;
         font-size: 28px;
@@ -68,6 +76,11 @@
   </nav>
 
   <h1>Rinad Abuhilal</h1>
+
+  <div class="container">
+    <div class="profile-img">
+      <img src="me.jpg" alt="Rinad Abuhilal">
+    </div>
 
     <div class="info">
       
