--- a/projects.html
+++ b/projects.html
@@ -70,8 +70,8 @@
 <body>
 
   <nav>
-    <a href="profile page home flex.html">Home</a>
-    <a href="projects flex.html">Projects</a>
+    <a href="profile-home.html">Home</a>
+    <a href="projects.html">Projects</a>
   </nav>
 
   <h1>My Projects</h1>
