--- a/profile-home.html
+++ b/profile-home.html
@@ -63,8 +63,8 @@
 <body>
 
   <nav>
-    <a href="profile page home flex.html">Home</a>
-    <a href="projects flex.html">Projects</a>
+    <a href="profile-home.html">Home</a>
+    <a href="projects.html">Projects</a>
   </nav>
 
   <h1>Rinad Abuhilal</h1>
